# iete_chennai_prototype

./: .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
about/: urls.py  views.py
committee/: apps.py
contact/: urls.py  views.py
events/: admin.py  models.py  urls.py  views.py
events/migrations/: 0001_initial.py  0002_event_slug.py  0003_alter_event_slug.py
executive_committee/: apps.py  urls.py  views.py
home/: urls.py  views.py
iete_chennai/: asgi.py  settings.py  urls.py  wsgi.py
membership/: urls.py  views.py
newsletter/: urls.py  views.py
static/assets/fonts/: fontsheet.css
static/css/: about.css  contact.css  events.css  executive_committee.css  home.css  indiv_event.css  membership.css  newsletter.css
static/css/special_css/: chencon22.css
static/js/: events.js  general.js  indiv_event.js  membership.js  newsletter.js
templates/: about.html  contact.html  events.html  executive_committee.html  home.html  indiv_event.html  membership.html  newsletter.html
templates/special_templates/: chencon22.html
