[tool.poetry]
name = "iete-chennai"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"
django-environ = "^0.11.2"
gunicorn = "^21.2.0"
pillow = "^10.0.0"
psycopg2-binary = "^2.9.7"
dj-database-url = "^2.1.0"
whitenoise = {extras = ["brotli"], version = "^6.5.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
